--- a/CapstoneBackend.Core/appsettings.Development.json
+++ b/CapstoneBackend.Core/appsettings.Development.json
@@ -11,7 +11,7 @@
       "FalseTestKey": false
     },
     "Database": {
-      "ConnectionString": "server=localhost;port=3306;database=sakila;uid=root;pwd=admin;"
+      "ConnectionString": "server=localhost;port=3306;database=databaseproject;uid=root;pwd=d0ntf0rg3t1;"
     },
     "AuthTokenKey": "if you ever put your keys directly into your repos, you will get yelled at"
   }
